Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I8ec8d124d01075b528fe637783670daccb2da3cf

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -2391,7 +2391,7 @@
     <string name="accessibility_control_timeout_preference_summary" msgid="5283566580551714506">"Scegli per quanto tempo lasciare visibili i messaggi che ti chiedono di eseguire delle operazioni e che vengono mostrati solo temporaneamente.\n\nNon tutte le app supportano questa impostazione."</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"Ritardo pressione prolungata"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Inversione dei colori"</string>
-    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Usa Inversione dei colori"</string>
+    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Usa inversione dei colori"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"L\'inversione dei colori rende scure le schermate chiare.&lt;br/&gt;&lt;br/&gt; Nota: &lt;ol&gt; &lt;li&gt; L\'inversione dei colori rende anche chiare le schermate scure.&lt;/li&gt; &lt;li&gt; I colori vengono modificati nei contenuti multimediali e nelle immagini.&lt;/li&gt; &lt;li&gt; Puoi anche usare il tema scuro per mostrare uno sfondo scuro. Il tema scuro funziona solo con app supportate. L\'inversione dei colori funziona invece in tutte le app.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Clic automatico (tempo di interazione)"</string>
     <string name="accessibility_autoclick_description" msgid="6827042379062255307">"La funzione Clic automatico richiede un mouse collegato. Puoi configurare il puntatore del mouse per fare clic automaticamente quando rimane fermo per un determinato periodo di tempo."</string>
@@ -2412,7 +2412,7 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Feedback al tocco"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Usa <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Apri <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Usa Correzione del colore"</string>
+    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Usa correzione del colore"</string>
     <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Mostra sottotitoli"</string>
     <string name="accessibility_caption_primary_switch_summary" msgid="2754071646412717674">"Solo per app supportate"</string>
     <string name="captioning_caption_appearance_title" msgid="4501313548541670063">"Stile e dimensioni sottotitoli"</string>
@@ -4838,12 +4838,12 @@
     <string name="ambient_display_title" product="default" msgid="5885136049497127396">"Tocca due volte per controllare il telefono"</string>
     <string name="ambient_display_title" product="tablet" msgid="205744440641466921">"Tocca due volte il tablet per controllare le notifiche"</string>
     <string name="ambient_display_title" product="device" msgid="4164103424628824786">"Tocca due volte il dispositivo per controllare le notifiche"</string>
-    <string name="one_handed_title" msgid="2584414010282746195">"Modalità one-hand"</string>
-    <string name="one_handed_mode_enabled" msgid="3396864848786359651">"Usa modalità one-hand"</string>
-    <string name="keywords_one_handed" msgid="969440592493034101">"accessibilità one-hand"</string>
+    <string name="one_handed_title" msgid="2584414010282746195">"Modalità a una mano"</string>
+    <string name="one_handed_mode_enabled" msgid="3396864848786359651">"Usa modalità a una mano"</string>
+    <string name="keywords_one_handed" msgid="969440592493034101">"accessibilità a una mano"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"Scorri verso il basso per"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"Utilizza la scorciatoia per"</string>
-    <string name="one_handed_mode_intro_text" msgid="4313074112548160836">"Per usare la modalità one-hand, scorri verso il basso dal bordo inferiore dello schermo. Per usare questa funzionalità, assicurati che la navigazione tramite gesti sia attiva nelle impostazioni Navigazione del sistema."</string>
+    <string name="one_handed_mode_intro_text" msgid="4313074112548160836">"Per usare la modalità a una mano, scorri verso il basso dal bordo inferiore dello schermo. Per usare questa funzionalità, assicurati che la navigazione tramite gesti sia attiva nelle impostazioni Navigazione del sistema."</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"Trascinare lo schermo per averlo a portata di mano"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"La parte superiore dello schermo sarà a portata di pollice."</string>
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"Mostrare le notifiche"</string>
