--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -2370,11 +2370,11 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"កម្រិតថ្លាពេលមិនកំពុងប្រើប្រាស់"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"ថ្លា"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"មិនថ្លា"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"អត្ថបទ​​កម្រិត​ពណ៌​ខ្ពស់"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"អក្សរពន្លឺបញ្ច្រាស​​កម្រិត​​ខ្ពស់"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"ធ្វើ​បច្ចុប្បន្នភាព​ការ​ពង្រីក​អេក្រង់​ស្វ័យប្រវត្តិ"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"ធ្វើ​បច្ចុប្បន្ន​ភាព​ការ​ពង្រីក​អេក្រង់​ពេល​មាន​ដំណើរ​ផ្លាស់​ប្ដូរ​កម្មវិធី"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"ប៊ូតុងថាមពល​បញ្ចប់​ការ​ហៅ"</string>
-    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"ព្រួញកណ្តុរធំ"</string>
+    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"ទស្សន៍ទ្រនិច​កណ្តុរធំ"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"លុប​រូបភាព​មាន​ចលនា"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"សំឡេងម៉ូណូ"</string>
     <string name="accessibility_toggle_primary_mono_summary" msgid="1935283927319407303">"រួមផ្សំប៉ុស្តិ៍ចូលគ្នាពេលកំពុងចាក់សំឡេង"</string>
