--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -1072,7 +1072,7 @@
     <string name="wifi_subscription_summary" msgid="18802471063384598">"Prenumeratos peržiūra arba keitimas"</string>
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"Atsitikt. tv. pasir. MAC"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Įrenginio pridėjimas"</string>
-    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Centruokite toliau pateiktą QR kodą, kad galėtumėte pridėti įrenginį prie „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
+    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Nustatykite QR kodą centre, kad galėtumėte pridėti įrenginį prie „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
     <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"QR kodo nuskaitymas"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"Centruokite toliau pateiktą QR kodą, kad galėtumėte prisijungti prie „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
     <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Prisijunkite prie „Wi‑Fi“ nuskaitydami QR kodą"</string>
@@ -3826,7 +3826,7 @@
     <string name="work_ringtone_title" msgid="4810802758746102589">"Darbo telef. skambėjimo tonas"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"Numatytasis darbo pranešimo garsas"</string>
     <string name="work_alarm_ringtone_title" msgid="3369293796769537392">"Numatytasis darbo signalo garsas"</string>
-    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Tokie pat kaip asmeninio profilio"</string>
+    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Toks pat kaip asmeninio profilio"</string>
     <string name="work_sync_dialog_title" msgid="7810248132303515469">"Naudoti asmeninio profilio garsus?"</string>
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"Patvirtinti"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"Darbo profilyje bus naudojami tokie pat garsai kaip asmeniniame profilyje"</string>
