--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -2273,7 +2273,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"無障礙設定"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"顯示屏, 互動, 音訊"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"視覺輔助設定"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"您可視乎個人需要自訂此裝置。這些無障礙功能可在 [設定] 中變更。"</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"您可視乎個人需要自訂此裝置，日後也可前往「設定」變更這些無障礙功能。"</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"變更字型大小"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"螢幕閱讀器"</string>
     <string name="captions_category_title" msgid="574490148949400274">"字幕"</string>
