--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -2272,7 +2272,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"無障礙設定"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"螢幕、互動、音訊"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"視覺輔助設定"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"你可以根據個人需求自訂這個裝置，日後，你可以前往 [設定] 變更這些無障礙功能。"</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"你可以根據個人需求自訂這個裝置，日後也可前往「設定」變更這些無障礙功能。"</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"變更字型大小"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"螢幕閱讀器"</string>
     <string name="captions_category_title" msgid="574490148949400274">"字幕"</string>
@@ -2288,7 +2288,7 @@
     <string name="experimental_category_title" msgid="898904396646344152">"實驗性"</string>
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"功能標記"</string>
     <string name="talkback_title" msgid="8756080454514251327">"TalkBack"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"這是一種螢幕閱讀器，主要適用於視障和低視能人士"</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"這是一種螢幕閱讀器，主要適用於失明和低視能人士"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"輕觸畫面上的項目即可聽取項目內容"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"字幕偏好設定"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"放大"</string>
@@ -2449,9 +2449,9 @@
     <string name="daltonizer_mode_protanomaly_title" msgid="6787594316700223938">"紅色弱視"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="1869867447813349033">"藍色弱視"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"灰階"</string>
-    <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"紅 - 綠"</string>
-    <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"紅 - 綠"</string>
-    <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"藍 - 黃"</string>
+    <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"紅綠"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"紅綠"</string>
+    <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"藍黃"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"超暗"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"啟用超暗螢幕設定"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"將螢幕調得比手機最低亮度更暗"</string>
