--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -2046,7 +2046,7 @@
     <string name="controls_label" msgid="8671492254263626383">"નિયંત્રણો"</string>
     <string name="force_stop" msgid="2681771622136916280">"ફરજિયાત બંધ કરો"</string>
     <string name="total_size_label" msgid="2052185048749658866">"કુલ"</string>
-    <string name="application_size_label" msgid="6407051020651716729">"ઍપ્લિકેશનનું કદ"</string>
+    <string name="application_size_label" msgid="6407051020651716729">"ઍપનું કદ"</string>
     <string name="external_code_size_label" msgid="7375146402660973743">"USB સ્ટોરેજ ઍપ્લિકેશન"</string>
     <string name="data_size_label" msgid="7814478940141255234">"વપરાશકર્તા ડેટા"</string>
     <string name="external_data_size_label" product="nosdcard" msgid="1054860423004751290">"USB સ્ટોરેજ ડેટા"</string>
@@ -2150,7 +2150,7 @@
     <string name="running_processes_header_title" msgid="558961782589967366">"ઉપકરણ મેમરી"</string>
     <string name="running_processes_header_footer" msgid="2726092156680487584">"ઍપ્લિકેશન RAM વપરાશ"</string>
     <string name="running_processes_header_system_prefix" msgid="8819527769608555124">"સિસ્ટમ"</string>
-    <string name="running_processes_header_apps_prefix" msgid="4151874328324238133">"ઍપ્લિકેશનો"</string>
+    <string name="running_processes_header_apps_prefix" msgid="4151874328324238133">"ઍપ"</string>
     <string name="running_processes_header_free_prefix" msgid="4271100378295864738">"મફત"</string>
     <string name="running_processes_header_used_prefix" msgid="5205762402234243007">"વપરાયેલ"</string>
     <string name="running_processes_header_cached_prefix" msgid="839132595831993521">"કેશ્ડ"</string>
@@ -2178,7 +2178,7 @@
     <string name="language_settings" msgid="8700174277543875046">"ભાષા અને ઇનપુટ"</string>
     <string name="language_empty_list_user_restricted" msgid="8050367405839231863">"તમારી પાસે ઉપકરણની ભાષા બદલવાની પરવાનગી નથી."</string>
     <string name="language_keyboard_settings_title" msgid="7934844313233544557">"ભાષા અને ઇનપુટ"</string>
-    <string name="input_assistance" msgid="3437568284144952104">"સાધનો"</string>
+    <string name="input_assistance" msgid="3437568284144952104">"ટૂલ"</string>
     <string name="keyboard_settings_category" msgid="5392847229300117064">"કીબોર્ડ અને ઇનપુટ પદ્ધતિઓ"</string>
     <string name="phone_language" msgid="5986939176239963826">"ભાષાઓ"</string>
     <string name="phone_language_summary" msgid="863041222809685325"></string>
@@ -3511,7 +3511,7 @@
     <string name="keywords_time_format" msgid="5384803098766166820">"24-કલાકના ફૉર્મેટનો ઉપયોગ કરો"</string>
     <string name="keywords_storage_files" msgid="4509695858659705198">"ડાઉનલોડ કરો"</string>
     <string name="keywords_app_default" msgid="8977706259156428770">"આના વડે ખોલો"</string>
-    <string name="keywords_applications_settings" msgid="999926810912037792">"ઍપ્લિકેશનો"</string>
+    <string name="keywords_applications_settings" msgid="999926810912037792">"ઍપ"</string>
     <string name="keywords_time_zone" msgid="6402919157244589055">"સમયઝોન"</string>
     <string name="keywords_draw_overlay" msgid="3170036145197260392">"ચૅટ હેડ, સિસ્ટમ, અલર્ટ, વિંડો, સંવાદ, ડિસ્પ્લે, બીજી ઍપની ઉપર, દોરો"</string>
     <string name="keywords_flashlight" msgid="2133079265697578183">"ફ્લેશલાઇટ, લાઇટ, ટોર્ચ"</string>
@@ -4482,7 +4482,7 @@
     <string name="accessibility_lock_screen_progress" msgid="4597298121698665401">"<xliff:g id="COUNT_1">%2$d</xliff:g> માંથી <xliff:g id="COUNT_0">%1$d</xliff:g> અક્ષરોનો ઉપયોગ કર્યો"</string>
     <string name="draw_overlay" msgid="7902083260500573027">"અન્ય ઍપથી ઉપર બતાવો"</string>
     <string name="system_alert_window_settings" msgid="6458633954424862521">"અન્ય ઍપથી ઉપર બતાવો"</string>
-    <string name="system_alert_window_apps_title" msgid="1537949185175079866">"ઍપ્લિકેશનો"</string>
+    <string name="system_alert_window_apps_title" msgid="1537949185175079866">"ઍપ"</string>
     <string name="system_alert_window_access_title" msgid="3074573819155116817">"અન્ય ઍપથી ઉપર બતાવો"</string>
     <string name="permit_draw_overlay" msgid="4468994037192804075">"અન્ય ઍપની ઉપર ડિસ્પ્લે કરવાની મંજૂરી આપો"</string>
     <string name="allow_overlay_description" msgid="1607235723669496298">"તમે ઉપયોગમાં લઈ રહ્યાં હો તેવી અન્ય ઍપની ટોચ ઉપર આ ઍપને ડિસ્પ્લે થવા દો. આ ઍપ તમે ક્યાં ટૅપ કરો છો અથવા તો સ્ક્રીનના ડિસ્પ્લે પર શું ફેરફાર કરો છો તે જોઈ શકશે."</string>
@@ -4769,7 +4769,7 @@
     <string name="dark_ui_settings_dialog_acknowledge" msgid="250437497729953965">"સમજાઈ ગયું"</string>
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"ઘેરી થીમ અજમાવી જુઓ"</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"બૅટરી આવરદા વધારવામાં સહાય કરે છે"</string>
-    <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ઝડપી સેટિંગ વિકાસકર્તા ટાઇલ"</string>
+    <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ઝડપી સેટિંગ ડેવલપર ટાઇલ"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"adb અધિકરણ સમયસમાપ્તિને બંધ કરો"</string>
     <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"ડિફૉલ્ટ (7 દિવસ) અથવા વપરાશકર્તા દ્વારા કન્ફિગર કરેલા સમય (ઓછામાં ઓછા 1 દિવસ)માં ફરી કનેક્ટ કરવામાં ન આવેલા હોય તેવા સિસ્ટમ માટે અધિકરણને ઑટોમૅટિક રીતે રદ કરવાનું બંધ કરો."</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"Winscope ટ્રેસ"</string>
@@ -5043,7 +5043,7 @@
     <string name="zen_suggestion_summary" msgid="1984990920503217">"ધ્યાન કેન્દ્રિત કરવા માટે નોટિફિકેશન થોભાવો"</string>
     <string name="disabled_feature" msgid="7151433782819744211">"સુવિધા ઉપલબ્ધ નથી"</string>
     <string name="disabled_feature_reason_slow_down_phone" msgid="5743569256308510404">"આ સુવિધા બંધ કરવામાં આવી છે કારણ કે તે તમારા ફોનની કામ કરવાની ગતિ ધીમી કરે છે"</string>
-    <string name="show_first_crash_dialog" msgid="1696584857732637389">"હંમેશા ક્રૅશ સંવાદ બતાવો"</string>
+    <string name="show_first_crash_dialog" msgid="1696584857732637389">"હંમેશાં ક્રૅશ સંવાદ બતાવો"</string>
     <string name="show_first_crash_dialog_summary" msgid="4692334286984681111">"જયારે પણ કોઈ ઍપ ક્રૅશ થાય ત્યારે સંવાદ બતાવો"</string>
     <string name="angle_enabled_app" msgid="6044941043384239076">"ANGLE દ્વારા ચાલુ ઍપ્લિકેશન પસંદ કરો"</string>
     <string name="angle_enabled_app_not_set" msgid="4472572224881726067">"કોઈ ANGLE દ્વારા ચાલુ ઍપ્લિકેશન સેટ નથી"</string>
@@ -5499,7 +5499,7 @@
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"\'રિંગ વાગતી અટકાવો\'નો ઉપયોગ કરો"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"વાઇ-ફાઇ હૉટસ્પૉટનો ઉપયોગ કરો"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"ઍપ પિનિંગનો ઉપયોગ કરો"</string>
-    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"વિકાસકર્તાના વિકલ્પોનો ઉપયોગ કરો"</string>
+    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ડેવલપરના વિકલ્પોનો ઉપયોગ કરો"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"પ્રિન્ટ સેવાનો ઉપયોગ કરો"</string>
     <string name="multiple_users_main_switch_title" msgid="2759849884417772712">"એકથી વધુ વપરાશકર્તાઓનો ઉપયોગ કરો"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"વાયરલેસ ડિબગીંગનો ઉપયોગ કરો"</string>
