--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -2289,7 +2289,7 @@
     <string name="talkback_summary" msgid="5820927220378864281">"Pembaca layar khusus untuk orang yang mengalami kebutaan atau gangguan penglihatan"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"Ketuk item di layar untuk mendengar item tersebut dibacakan"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Preferensi teks"</string>
-    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"pembesaran"</string>
+    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Pembesaran"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"Jenis pembesaran"</string>
     <string name="accessibility_magnification_area_settings_message" msgid="8498648925928109462">"Memperbesar layar penuh, area tertentu, atau beralih antara kedua opsi tersebut"</string>
     <string name="accessibility_magnification_area_settings_full_screen_summary" msgid="2728962784113713010">"Layar penuh"</string>
@@ -2390,7 +2390,7 @@
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"Waktu ambil tindakan"</string>
     <string name="accessibility_control_timeout_preference_summary" msgid="5283566580551714506">"Pilih durasi tampilan pesan yang perlu ditindak, tetapi hanya terlihat sementara.\n\nTidak semua aplikasi mendukung setelan ini."</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"Jeda sentuh lama"</string>
-    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"inversi warna"</string>
+    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Inversi warna"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Gunakan inversi warna"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"Inversi warna mengubah layar terang menjadi gelap.&lt;br/&gt;&lt;br/&gt; Catatan: &lt;ol&gt; &lt;li&gt; Inversi warna juga mengubah layar gelap menjadi terang.&lt;/li&gt; &lt;li&gt; Warna akan berubah pada media dan gambar.&lt;/li&gt; &lt;li&gt; Tema gelap dapat digunakan untuk menampilkan latar belakang gelap. Tema gelap berfungsi dengan aplikasi yang didukung. Inversi warna berfungsi di semua aplikasi.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Klik otomatis (lama singgah)"</string>
@@ -2450,7 +2450,7 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Merah-hijau"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Merah-hijau"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Biru-kuning"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ekstra redup"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Ekstra redup"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Buat layar ekstra redup"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Buat layar lebih redup daripada kecerahan minimum ponsel"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Buat layar lebih redup daripada kecerahan minimum tablet"</string>
