--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -3730,7 +3730,7 @@
     <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"အကြောင်းကြားချက်များကို မြင်ရ သို့မဟုတ် ကြားရမည် မဟုတ်ပါ။ ကြယ်ပွင့်ပြထားသော အဆက်အသွယ်များနှင့် အကြိမ်ကြိမ် ခေါ်ဆိုသူများ၏ ဖုန်းခေါ်ဆိုမှုများကိုသာ ခွင့်ပြုပါမည်။"</string>
     <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(လက်ရှိ ဆက်တင်)"</string>
     <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"\'မနှောင့်ယှက်ရ\' အကြောင်းကြားချက် ဆက်တင်များ ပြောင်းမလား။"</string>
-    <string name="sound_work_settings" msgid="752627453846309092">"အလုပ်ပရိုဖိုင်ဆိုင်ရာ အသံများ"</string>
+    <string name="sound_work_settings" msgid="752627453846309092">"အလုပ်ပရိုဖိုင် အသံများ"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"ကိုယ်ပိုင်ပရိုဖိုင်အသံများ သုံးပါ"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"သင့်ကိုယ်ပိုင်ပရိုဖိုင်နှင့်တူညီသည့် အသံများကို သုံးရန်"</string>
     <string name="work_ringtone_title" msgid="4810802758746102589">"အလုပ်ဖုန်းမြည်သံ"</string>
@@ -5005,7 +5005,7 @@
     <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"ဤချက်ချင်းသုံးအက်ပ်ကို ဖယ်ရှားလိုပါသလား။"</string>
     <string name="launch_instant_app" msgid="8503927414339606561">"ဖွင့်ရန်"</string>
     <string name="game_storage_settings" msgid="2521393115726178837">"ဂိမ်းများ"</string>
-    <string name="app_info_storage_title" msgid="4076977173803093808">"သိုလှောင်နေရာ အသုံးပြုမှု"</string>
+    <string name="app_info_storage_title" msgid="4076977173803093808">"နေရာအသုံးပြုမှု"</string>
     <string name="webview_uninstalled_for_user" msgid="627352948986275488">"(အသုံးပြုသူ <xliff:g id="USER">%s</xliff:g> အတွက် ဖြုတ်ထားသည်)"</string>
     <string name="webview_disabled_for_user" msgid="5809886172032644498">"(အသုံးပြုသူ <xliff:g id="USER">%s</xliff:g> အတွက် ပိတ်ထားသည်)"</string>
     <string name="autofill_app" msgid="7595308061826307921">"အော်တိုဖြည့် ဝန်ဆောင်မှု"</string>
