--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -4839,7 +4839,7 @@
     <string name="ambient_display_title" product="tablet" msgid="205744440641466921">"ଟାବ୍‌ଲେଟ୍‌ ଯାଞ୍ଚ କରିବାକୁ ଡବଲ୍‌-ଟାପ୍‌ କରନ୍ତୁ"</string>
     <string name="ambient_display_title" product="device" msgid="4164103424628824786">"ଡିଭାଇସ୍‌ ଯାଞ୍ଚ କରିବାକୁ ଡବଲ୍‌-ଟାପ୍‌ କରନ୍ତୁ"</string>
     <string name="one_handed_title" msgid="2584414010282746195">"ଏକ-ହାତ ମୋଡ୍"</string>
-    <string name="one_handed_mode_enabled" msgid="3396864848786359651">"ଏକ-ହାତ ମୋଡ୍ ବ୍ୟବହାର କରନ୍ତୁ"</string>
+    <string name="one_handed_mode_enabled" msgid="3396864848786359651">"ୱାନ-ହେଣ୍ଡେଡ ମୋଡକୁ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="keywords_one_handed" msgid="969440592493034101">"ରିଚେବିଲିଟୀ"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"ଏହା କରିବା ପାଇଁ ତଳକୁ ସ୍ୱାଇପ୍ କରନ୍ତୁ"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"ଏଥିପାଇଁ ସର୍ଟକଟ୍ ବ୍ୟବହାର କରନ୍ତୁ"</string>
