--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -2270,7 +2270,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"ਪਹੁੰਚਯੋਗਤਾ ਸੈਟਿੰਗਾਂ"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"ਡਿਸਪਲੇ, ਅੰਤਰਕਿਰਿਆ, ਆਡੀਓ"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"ਨਜ਼ਰ ਸੰਬੰਧੀ ਸੈਟਿੰਗਾਂ"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"ਤੁਸੀਂ ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਆਪਣੀਆਂ ਲੋੜਾਂ ਦੇ ਅਨੁਸਾਰ ਵਿਉਂਤਬੱਧ ਕਰ ਸਕਦੇ ਹੋ। ਇਹਨਾਂ ਪਹੁੰਚਯੋਗਤਾ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਬਾਅਦ ਵਿੱਚ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਜਾ ਕੇ ਬਦਲਿਆ ਜਾ ਸਕਦਾ ਹੈ।"</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"ਤੁਸੀਂ ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਆਪਣੀਆਂ ਲੋੜਾਂ ਮੁਤਾਬਕ ਵਿਉਂਤਬੱਧ ਕਰ ਸਕਦੇ ਹੋ। ਇਨ੍ਹਾਂ ਪਹੁੰਚਯੋਗਤਾ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਬਾਅਦ ਵਿੱਚ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਜਾ ਕੇ ਬਦਲਿਆ ਜਾ ਸਕਦਾ ਹੈ।"</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"ਫੌਂਟ ਦਾ ਆਕਾਰ ਬਦਲੋ"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"ਸਕ੍ਰੀਨ ਰੀਡਰ"</string>
     <string name="captions_category_title" msgid="574490148949400274">"ਸੁਰਖੀਆਂ"</string>
@@ -2287,7 +2287,7 @@
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"ਵਿਸ਼ੇਸ਼ਤਾ ਵਾਲੇ ਫਲੈਗ"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"ਸਕ੍ਰੀਨ ਰੀਡਰ ਮੁੱਖ ਤੌਰ \'ਤੇ ਨੇਤਰਹੀਣਾਂ ਅਤੇ ਘੱਟ ਨਜ਼ਰ ਵਾਲੇ ਲੋਕਾਂ ਲਈ ਹੈ"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"ਆਪਣੀ ਸਕ੍ਰੀਨ \'ਤੇ ਦਿੱਤੀਆਂ ਆਈਟਮਾਂ ਨੂੰ ਉੱਚੀ ਅਵਾਜ਼ ਵਿੱਚ ਸੁਣਨ ਲਈ ਉਹਨਾਂ \'ਤੇ ਟੈਪ ਕਰੋ"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"ਆਪਣੀ ਸਕ੍ਰੀਨ \'ਤੇ ਦਿੱਤੀਆਂ ਆਈਟਮਾਂ ਨੂੰ ਉੱਚੀ ਅਵਾਜ਼ ਵਿੱਚ ਸੁਣਨ ਲਈ ਉਨ੍ਹਾਂ \'ਤੇ ਟੈਪ ਕਰੋ"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"ਸੁਰਖੀ ਸੰਬੰਧੀ ਤਰਜੀਹਾਂ"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"ਵੱਡਦਰਸ਼ੀਕਰਨ"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"ਵੱਡਦਰਸ਼ੀਕਰਨ ਦੀ ਕਿਸਮ"</string>
