--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -4231,7 +4231,7 @@
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Dogodki"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Aplikacijam dovoli preglasitev"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Aplikacije, ki lahko preglasijo"</string>
-    <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Izberi več aplikacij"</string>
+    <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Izberite več aplikacij"</string>
     <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Ni izbranih aplikacij"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Nobena aplikacija ne sme preglasiti"</string>
     <string name="zen_mode_bypassing_apps_add" msgid="5031919618521327102">"Dodajte aplikacije"</string>
